--- a/site/index.html
+++ b/site/index.html
@@ -57,9 +57,10 @@
           />
           <span class="frame1-text"><span>scents</span></span>
           <div class="frame1-group1">
-            <p class="frame1-text04"><a href="./part2/index.html">Catalog!</a></p>
-            <p class="frame1-text06"><a href="./part4/index.html">SALE!</a></p>
-            <link class="frame1-text06">SALE<link>
+            <p class="frame1-text02"><a href="">Home</a></p>
+            <p class="frame1-text04"><a href="">Catalog</a></p>
+            <p class="frame1-text06"><a href="./part4/index.html">SALE</a></p>
+           
             <span class="frame1-text08"><span>ABOUT US</span></span>
           </div>
           <img
@@ -124,7 +125,8 @@
             alt="Rectangle7124"
             class="frame1-rectangle7"
           />
-          <span class="frame1-text14"><span>OUR SCENTS</span></span>
+         
+          <p class="frame1-text14"><a href="./part2/index.html">OUR SCENTS</a></p>
           <img
             src="public/external/rectangle8126-s3pc-200h.png"
             alt="Rectangle8126"
