--- a/site/part2/index.html
+++ b/site/part2/index.html
@@ -89,7 +89,9 @@
               alt="Rectangle8347"
               class="slide1691-rectangle8"
             />
-            <span class="slide1691-text08"><span>GET YOUR PERFUME</span></span>
+          
+            <button class="slide1691-text08"><a href="../part4/index.html">GET YOUR PERFUME</a></button>
+
           </div>
           <div class="slide1691-group5">
             <img
