--- a/site/part4/index.html
+++ b/site/part4/index.html
@@ -132,8 +132,8 @@
             </span>
             <span class="slide1692-text20">
               <span class="slide1692-text21">50$</span>
-              <span class="slide1692-text22">4</span>
-              <span>5$</span>
+              <span class="slide1692-text22" style="color: grey;">45$</span>
+              <span class="slide1692-text23" style="color: black;">Buy</span>
             </span>
             <img
               src="public/external/line1594-h3m9o.svg"
